# Dropvaultv3

./: .gitmodules  README.md
DropVault/: Dockerfile.base  PodDropvaultAuthent.yaml
DropVault/Dropvault-stockage/key/: 11  116  151  178  181  187  191  194  202  204  208  209  210  231  235  238  44  46  78  79  80  81  82  83  84  85  86  87  88  89  90  91  92  93
DropVault/Dropvault-stockage/stock/: 1  15  150  151  17  178  181  187  191  194  2  202  204  208  209  210  211  27  28  29  34  4  44  45  46  53  65  66  71  74  9  90
DropVault/Dropvault-stockage/stockage/: .env  Cargo.toml  Dockerfile  Dockerfile.base  Dockerfile.stockms.save  DropvaultStockage.yaml  PodDropvaultStockage.yaml  Readme.MD  deployment.yaml  deployment2.yaml.save  docker-compose.yml  main_echec.rs
DropVault/Dropvault-stockage/stockage/migrations/2021-02-13-074137_add_files/: up.sql
DropVault/Dropvault-stockage/stockage/src/: auth.rs  errors.rs  files.rs  main.rs  models.rs  schema.rs
DropVault/archive/: Cargo.toml  Dockerfile.base2  docker-compose.yml
DropVault/auth/: .env  Cargo.toml  Dockerfile  Dockerfile.base  Dockerfile.base.save  DropvaultAuthent.yaml  DropvaultAuthent.yaml.save.1  DropvaultAuthentPV.yaml  TestDropvaultAuthent.yaml  ToolsTestDropvaultAuthent.yaml  app-deployment.yaml  app-service.yaml  db-deployment.yaml  db-service.yaml  db-tool-claim0-persistentvolumeclaim.yaml  db-tool-claim1-persistentvolumeclaim.yaml  db-tool-deployment.yaml  docker-compose.yml  migrate.sh  nano.save  note  readme.txt
DropVault/auth/migrations/2021-02-11-174634_add_users/: up.sql
DropVault/auth/src/: error.rs  handlers.rs  main.rs  models.rs  schema.rs
DropVault/exchange/: .env  Cargo.toml  readme.txt
DropVault/exchange/echange/: .env  Cargo.toml  readme.txt
DropVault/exchange/echange/migrations/2021-05-14-073637_add_exchange/: down.sql  up.sql
DropVault/exchange/echange/src/: echange.rs  main.rs  models.rs  schema.rs
DropVault/exchange/key/: readme.txt
DropVault/exchange/migrations/2021-05-13-071432_add_keys/: down.sql  up.sql
DropVault/exchange/src/: exchange.rs  main.rs  models.rs
DropVault/pubkey/: .env  readme.txt
DropVault/pubkey/migrations/2021-05-13-071432_add_keys/: down.sql  up.sql
DropVault/pubkey/src/: errors.rs  exchange.rs  main.rs  models.rs  schema.rs
