[package]
name = "auth"
version = "0.1.0"
authors = ["romainlom1843 <romain.lombardo@isen.yncrea.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
diesel = { version = "1.4.2", features = ["postgres","uuidv07", "r2d2", "chrono"] }
dotenv = "0.15.0"
futures = "0.3.1"
r2d2 = "0.8.8"
serde = "1.0"
chrono = { version = "0.4.10", features = ["serde"] }
bcrypt ="0.8.2"
jsonwebtoken = "1"
rustc-serialize = "0.3"
rand="0.8"
pbkdf2 = "0.7"
rand_core = { version = "0.6", features = ["std"] }
