[package]
name = "stockage"
version = "0.1.0"
authors = ["romainlom1843 <romain.lombardo@isen.yncrea.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web="2.0.0"
diesel = { version = "1.4.2", features = ["postgres","uuidv07", "r2d2", "chrono"] }
dotenv = "0.15.0"
futures = "0.3.1"
derive_more = "0.99.2"
r2d2 = "0.8.8"
serde = "1.0"
chrono = { version = "0.4.10", features = ["serde"] }
serde_derive = "1.0"
serde_json = "1.0"
actix-service = "1.0.1"
alcoholic_jwt = "1.0.0"
actix-web-httpauth = { git = "https://github.com/actix/actix-web-httpauth" }
reqwest = "0.9.22"
actix-rt = "1.0.0"
